--- a/index.html
+++ b/index.html
@@ -391,30 +391,37 @@
     /* Reviews Preview Section */
     .reviews-preview-section {
       padding: 5rem 0;
-      background: white;
+      background: transparent;
     }
 
     .reviews-preview-container {
-      max-width: 1200px;
+      max-width: 800px;
       margin: 0 auto;
       padding: 0 2rem;
     }
 
     .reviews-preview-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 2rem;
       margin-bottom: 3rem;
+      justify-items: center;
     }
 
     .review-preview-card {
       background: #f8f9fa;
-      padding: 2.5rem;
+      padding: 2rem;
       border-radius: 12px;
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
       transition: all 0.3s ease;
       cursor: pointer;
       border-left: 4px solid #7ED321;
+      color: #2c3e50;
+      text-decoration: none;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      height: 100%;
     }
 
     .review-preview-card:hover {
@@ -435,37 +442,29 @@
     }
 
     .review-text {
-      font-size: 1.1rem;
+      font-size: 1rem;
       line-height: 1.7;
-      color: #4a5568;
       font-style: italic;
-      margin-bottom: 1.5rem;
+      margin-bottom: 1rem;
     }
 
     .review-author {
-      font-weight: 600;
+      font-weight: 700;
       color: #1a2c4a;
+      margin-top: auto;
+      text-align: right;
     }
 
-    .view-all-reviews {
-      text-align: center;
-    }
-
-    .view-reviews-btn {
-      background: linear-gradient(135deg, #7ED321 0%, #6BC419 100%);
-      color: white;
-      padding: 1rem 2.5rem;
-      border: none;
-      border-radius: 50px;
-      font-size: 1.2rem;
-      font-weight: 600;
-      cursor: pointer;
-      transition: all 0.3s ease;
-    }
-
-    .view-reviews-btn:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 8px 25px rgba(126, 211, 33, 0.3);
+    /* Yelp embed container */
+    .yelp-embed {
+      width: 100%;
+      max-width: 320px;
+      margin: auto;
+      border-radius: 12px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+      background: white;
+      padding: 1rem;
+      box-sizing: border-box;
     }
 
     /* Footer */
@@ -558,7 +557,10 @@
         padding: 2rem;
       }
 
-      .features-grid,
+      .features-grid {
+        grid-template-columns: 1fr;
+      }
+
       .reviews-preview-grid {
         grid-template-columns: 1fr;
       }
@@ -613,119 +615,62 @@
           Gaming PC Builds
         </div>
       </div>
+
+      <!-- ================== REVIEWS PART BELOW ================== -->
+      <section class="reviews-preview-section" style="margin-top: 4rem; background: transparent;">
+        <div class="reviews-preview-container">
+
+          <h2 class="section-title" style="margin-bottom: 2rem; color: #ffffff;">What Our Customers Say</h2>
+
+          <div class="reviews-preview-grid">
+
+            <!-- Google Review 1 -->
+            <a href="https://g.co/kgs/aTzyNtc" target="_blank" rel="noopener noreferrer" class="review-preview-card">
+              <div class="review-stars">
+                <span class="star">★</span>
+                <span class="star">★</span>
+                <span class="star">★</span>
+                <span class="star">★</span>
+                <span class="star">★</span>
+              </div>
+              <div class="review-text">
+                Fantastic IT company. Great price!! Quick response and arrived on time and delivered 5 star customer service. Came completely prepared and worked magic getting our computer backed up and restored.
+              </div>
+              <div class="review-author">- Arlette Itami (Google)</div>
+            </a>
+
+            <!-- Yelp Review Embedded -->
+            <div class="yelp-embed" aria-label="Yelp review from Richard W.">
+              <span class="yelp-review" data-review-id="4jNumv3-VbC03fiZT6mS8w" data-hostname="www.yelp.com">
+                Read <a href="https://www.yelp.com/user_details?userid=o6nbNeRHdM0bdiNZcqE6nQ" rel="nofollow noopener" target="_blank">Richard W.</a>'s
+                <a href="https://www.yelp.com/biz/get-it-fixed-avondale?hrid=4jNumv3-VbC03fiZT6mS8w" rel="nofollow noopener" target="_blank">review</a> of
+                <a href="https://www.yelp.com/biz/7uFwjWVLR7qCRFIvA9NFog" rel="nofollow noopener" target="_blank">Get IT Fixed</a> on
+                <a href="https://www.yelp.com" rel="nofollow noopener" target="_blank">Yelp</a>
+              </span>
+            </div>
+
+            <!-- Google Review 2 -->
+            <a href="https://g.co/kgs/Vut4gsG" target="_blank" rel="noopener noreferrer" class="review-preview-card">
+              <div class="review-stars">
+                <span class="star">★</span>
+                <span class="star">★</span>
+                <span class="star">★</span>
+                <span class="star">★</span>
+                <span class="star">★</span>
+              </div>
+              <div class="review-text">
+                Dominic came to the house the same day my husband called. He diagnosed the issue on our PC, took it with him for the actual repair and had it back to us the next day. I can’t express enough how polite, professional and knowledgable he is. His price is beyond fair. And to top it off he helped go after our husky when he escaped!
+              </div>
+              <div class="review-author">- Annie M. (Google)</div>
+            </a>
+
+          </div>
+        </div>
+      </section>
+      <!-- ================== END REVIEWS PART ================== -->
+
     </div>
   </main>
-
-  <!-- Why Choose Us Section -->
-  <section class="why-choose-section">
-    <div class="why-choose-container">
-      <h2 class="section-title">Why Choose getITfixed?</h2>
-      <div class="features-grid">
-        <div class="feature-item">
-          <div class="feature-icon">⚡</div>
-          <div class="feature-content">
-            <h3>Fast Response</h3>
-            <p>Same-day service available with emergency repairs completed within 2 hours.</p>
-          </div>
-        </div>
-
-        <div class="feature-item">
-          <div class="feature-icon">🏠</div>
-          <div class="feature-content">
-            <h3>In-Home Service</h3>
-            <p>We come to you! No need to disconnect and haul your computer anywhere.</p>
-          </div>
-        </div>
-
-        <div class="feature-item">
-          <div class="feature-icon">💰</div>
-          <div class="feature-content">
-            <h3>Fair Pricing</h3>
-            <p>Transparent, upfront pricing with no hidden fees. Free consultations always.</p>
-          </div>
-        </div>
-
-        <div class="feature-item">
-          <div class="feature-icon">🎓</div>
-          <div class="feature-content">
-            <h3>Patient Teaching</h3>
-            <p>We don't just fix problems - we teach you how to avoid them in the future.</p>
-          </div>
-        </div>
-
-        <div class="feature-item">
-          <div class="feature-icon">🔒</div>
-          <div class="feature-content">
-            <h3>Data Protection</h3>
-            <p>Your files and privacy are safe with us. We use industry-standard security practices.</p>
-          </div>
-        </div>
-
-        <div class="feature-item">
-          <div class="feature-icon">⭐</div>
-          <div class="feature-content">
-            <h3>5-Star Service</h3>
-            <p>Hundreds of satisfied customers with consistently excellent reviews.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Reviews Preview Section -->
-  <section class="reviews-preview-section">
-    <div class="reviews-preview-container">
-      <h2 class="section-title">What Our Customers Say</h2>
-      <div class="reviews-preview-grid">
-        <div class="review-preview-card" onclick="goToReviews()">
-          <div class="review-stars">
-            <span class="star">★</span>
-            <span class="star">★</span>
-            <span class="star">★</span>
-            <span class="star">★</span>
-            <span class="star">★</span>
-          </div>
-          <div class="review-text">
-            "I'm not very tech-savvy, but they made everything simple and easy to understand. They set up my Wi-Fi and showed me how to use my new phone. Highly recommend!"
-          </div>
-          <div class="review-author">- Jane S., Sun City</div>
-        </div>
-
-        <div class="review-preview-card" onclick="goToReviews()">
-          <div class="review-stars">
-            <span class="star">★</span>
-            <span class="star">★</span>
-            <span class="star">★</span>
-            <span class="star">★</span>
-            <span class="star">★</span>
-          </div>
-          <div class="review-text">
-            "Quick, professional, and kind. They fixed my security camera system and made it so I can see everything from my iPad. Super helpful!"
-          </div>
-          <div class="review-author">- Mark R., Glendale</div>
-        </div>
-
-        <div class="review-preview-card" onclick="goToReviews()">
-          <div class="review-stars">
-            <span class="star">★</span>
-            <span class="star">★</span>
-            <span class="star">★</span>
-            <span class="star">★</span>
-            <span class="star">★</span>
-          </div>
-          <div class="review-text">
-            "Their in-home service is exactly what I needed. Everything was explained clearly and they even labeled my remotes and cords for me. 10/10!"
-          </div>
-          <div class="review-author">- Linda K., Peoria</div>
-        </div>
-      </div>
-      <div class="view-all-reviews">
-        <button class="view-reviews-btn" onclick="goToReviews()">
-          View All Reviews →
-        </button>
-      </div>
-    </div>
-  </section>
 
   <!-- Email Modal -->
   <div id="emailModal" class="modal">
@@ -785,3 +730,52 @@
         </div>
         <div class="footer-section">
           <h3>Contact</h3>
+          <ul>
+            <li><a href="tel:5551234567">(555) 123-4567</a></li>
+            <li><a href="mailto:info@getitfixed.com">info@getitfixed.com</a></li>
+            <li>Your City, State</li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>© 2024 getITfixed. All rights reserved. • 100% Satisfaction Guarantee • Local & Trusted • 5-Star Service</p>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Load Yelp widget script for embedded review -->
+  <script src="https://www.yelp.com/embed/widgets.js" type="text/javascript" async></script>
+
+  <script>
+    function openModal() {
+      document.getElementById('emailModal').style.display = 'block';
+    }
+    function closeModal() {
+      document.getElementById('emailModal').style.display = 'none';
+    }
+    function goToReviews() {
+      window.location.href = 'reviews.html';
+    }
+    function submitEmail(e) {
+      e.preventDefault();
+      const emailInput = document.getElementById('emailInput');
+      const successMessage = document.getElementById('successMessage');
+      const errorMessage = document.getElementById('errorMessage');
+      const submitBtn = document.getElementById('submitBtn');
+      submitBtn.disabled = true;
+      successMessage.style.display = 'none';
+      errorMessage.style.display = 'none';
+      // Simulate sending by timeout
+      setTimeout(() => {
+        if (emailInput.value.includes('@')) {
+          successMessage.style.display = 'block';
+          emailInput.value = '';
+        } else {
+          errorMessage.style.display = 'block';
+        }
+        submitBtn.disabled = false;
+      }, 1500);
+    }
+  </script>
+</body>
+</html>
