--- a/index.html
+++ b/index.html
@@ -406,6 +406,7 @@
       gap: 2rem;
       margin-bottom: 3rem;
       justify-items: center;
+      align-items: start;
     }
 
     .review-preview-card {
@@ -465,6 +466,7 @@
       background: white;
       padding: 1rem;
       box-sizing: border-box;
+      align-self: center;
     }
 
     /* Footer */
@@ -752,9 +754,6 @@
     }
     function closeModal() {
       document.getElementById('emailModal').style.display = 'none';
-    }
-    function goToReviews() {
-      window.location.href = 'reviews.html';
     }
     function submitEmail(e) {
       e.preventDefault();
