--- a/contact.html
+++ b/contact.html
@@ -556,7 +556,7 @@
               <div class="contact-icon">📞</div>
               <div class="contact-details">
                 <h3>Phone</h3>
-                <p><a href="tel:5551234567">(555) 123-4567</a></p>
+                <p><a href="tel:+16237385630">+1(623)-738-5630</a></p>
                 <p>Call for immediate assistance</p>
               </div>
             </div>
@@ -574,8 +574,8 @@
               <div class="contact-icon">📍</div>
               <div class="contact-details">
                 <h3>Location</h3>
-                <p>Your City, State</p>
-                <p>Serving the local area</p>
+                <p>Phoenix, Arizona</p>
+                <p>Serving the Phoenix metro area</p>
               </div>
             </div>
 
@@ -628,7 +628,7 @@
                 <option value="gaming-optimization">Gaming Performance Optimization</option>
                 <option value="gaming-build">Custom Gaming PC Build</option>
                 <option value="gaming-upgrade">Gaming PC Upgrade</option>
-                <option value="emergency">Emergency Repair</option>
+                <option value="emergency">Emergency Repair ($199 service charge)</option>
                 <option value="consultation">Free Consultation</option>
               </select>
             </div>
@@ -651,8 +651,8 @@
   <section class="emergency-banner">
     <div class="emergency-banner-container">
       <h2>Computer Emergency?</h2>
-      <p>Don't panic! Call us now for same-day emergency computer repair service.</p>
-      <a href="tel:5551234567" class="btn-emergency">Call Now: (555) 123-4567</a>
+      <p>Don't panic! Call us now for emergency computer repair service ($199 service charge).</p>
+      <a href="tel:+16237385630" class="btn-emergency">Call Now: +1(623)-738-5630</a>
     </div>
   </section>
 
@@ -675,7 +675,7 @@
           <ul class="hours-list">
             <li><span>Available</span><span>7 Days a Week</span></li>
             <li><span>Response Time</span><span>Within 2 Hours</span></li>
-            <li><span>Emergency Fee</span><span>+$50 After Hours</span></li>
+            <li><span>Service Charge</span><span>$199 Emergency Fee</span></li>
           </ul>
         </div>
 
@@ -722,9 +722,9 @@
         <div class="footer-section">
           <h3>Contact</h3>
           <ul>
-            <li><a href="tel:5551234567">(555) 123-4567</a></li>
+            <li><a href="tel:+16237385630">+1(623)-738-5630</a></li>
             <li><a href="mailto:info@getitfixed.com">info@getitfixed.com</a></li>
-            <li>Your City, State</li>
+            <li>Phoenix, Arizona</li>
           </ul>
         </div>
       </div>
@@ -836,7 +836,7 @@
         
         // Error
         formStatus.className = 'form-status error';
-        formStatus.textContent = '❌ Sorry, there was an error sending your message. Please try again or call us directly at (555) 123-4567.';
+        formStatus.textContent = '❌ Sorry, there was an error sending your message. Please try again or call us directly at +1(623)-738-5630.';
         formStatus.style.display = 'block';
         
       } finally {
