--- a/index.html
+++ b/index.html
@@ -183,6 +183,22 @@
       box-shadow: 0 4px 15px rgba(126, 211, 33, 0.3);
     }
 
+    /* Updated styles for image icons */
+    .service-icon.image-icon {
+      background: none;
+      box-shadow: none;
+      border-radius: 15px;
+      overflow: hidden;
+      padding: 0;
+    }
+
+    .service-icon.image-icon img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 15px;
+    }
+
     .service-card h3 {
       font-size: 1.4rem;
       font-weight: 700;
@@ -781,10 +797,12 @@
         </button>
       </div>
       
-      <!-- Services Cards -->
+      <!-- Services Cards with Real Images -->
       <div class="services-section">
         <div class="service-card">
-          <div class="service-icon">🔧</div>
+          <div class="service-icon image-icon">
+            <img src="images/computer-repair.jpg" alt="Computer Repair Service">
+          </div>
           <h3>Computer Repair & Maintenance</h3>
           <p>Professional diagnosis and repair of desktop and laptop computers with same-day service available.</p>
           <ul class="service-features">
@@ -796,7 +814,9 @@
           </ul>
         </div>
         <div class="service-card">
-          <div class="service-icon">🎮</div>
+          <div class="service-icon image-icon">
+            <img src="images/gaming-pc.jpg" alt="Gaming PC Build">
+          </div>
           <h3>Gaming PC Builds & Upgrades</h3>
           <p>Custom gaming PC builds tailored to your budget and performance needs, plus overclocking services.</p>
           <ul class="service-features">
