--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
       <div class="services-section">
         <div class="service-card">
           <div class="service-icon image-icon">
-            <img src="images/computer-repair.jpg" alt="Computer Repair Service">
+            <img src="images/IMG_8466.jpeg" alt="Computer Repair Service">
           </div>
           <h3>Computer Repair & Maintenance</h3>
           <p>Professional diagnosis and repair of desktop and laptop computers with same-day service available.</p>
